correctly get note.updated_at from db; make <pre> on /n/ page to wrap for better looking text notes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -795,6 +795,7 @@ hr.light2 {
       inside the note, which is not what I want.
       */
       overflow: visible;
+      white-space: pre-wrap;
     }
 
     h1 {
